# cmdmark

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  agent.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml
cmdmark/: __init__.py  main.py
docs/: index.md  modules.md  usage.md
tests/: test_main.py
tests/sample/git/: basic.yml  branch.yml
tests/sample/sys/: disk.yml
