[project]
name = "cmdmark"
version = "0.0.1"
authors = [
    {name = "Po-wei Huang",email = "abc1199281@gmail.com"}
]
description = "A CLI tool for managing commands like bookmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml (>=6.0.2,<7.0.0)", "pytest (>=8.3.5,<9.0.0)"]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/abc1199281/cmdmark"

[tool.poetry.scripts]
cmdmark = "cmdmark.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']